# HiGHS

./: .gitignore  BUILD.bazel  CMakeLists.txt  README.md  meson.build  meson_options.txt
.github/workflows/: build-clang.yml  build-fast.yml  build-linux.yml  build-macos.yml  build-mingw.yml  build-windows.yml  test-c-example.yml  test-exe-help.yml  test-fortran-win.yml
app/: CMakeLists.txt
check/: CMakeLists.txt  TestCallbacks.cpp  TestIpm.cpp  TestPdcgm.cpp
cmake/: README.md  cpp-highs.cmake  sources-python.cmake  sources.cmake
examples/: mats.py  scip.py
src/: CMakeLists.txt  HConfig.h.bazel.in  HConfig.h.in  HConfig.h.meson.in  Highs.h  meson.build
src/lp_data/: HConst.h  Highs.cpp  HighsColOracle.cpp  HighsColOracle.h  HighsInterface.cpp  HighsLpUtils.cpp  HighsLpUtils.h  HighsOptions.h  HighsPdcgm.cpp  HighsPdcgm.h  HighsPdcgmMatrix.cpp  HighsPdcgmMatrix.h  HighsSolution.cpp  HighsSolve.cpp
src/mip/: HighsCliqueTable.cpp  HighsCutPool.h  HighsDomain.cpp  HighsDomain.h  HighsDynamicRowMatrix.h  HighsMipSolver.cpp  HighsMipSolverData.cpp  HighsMipSolverData.h  HighsMipWorker.cpp  HighsMipWorker.h  HighsPrimalHeuristics.cpp  HighsSearch.cpp  HighsSearch.h
src/pdlp/: CupdlpWrapper.cpp  CupdlpWrapper.h
src/pdlp/cupdlp/: CMakeLists.txt  README.md  cupdlp_defs.h  cupdlp_linalg.c  cupdlp_linalg.h  cupdlp_solver.c  cupdlp_step.c  cupdlp_utils.c  cupdlp_utils.h  glbopts.h
src/pdlp/cupdlp/cuda/: CMakeLists.txt
src/presolve/: HPresolve.cpp  HPresolve.h  HPresolveDebug.cpp  HighsPostsolveStack.h
src/util/: HighsLinearSumBounds.h
(+2 files in other folders)
